fix(about): continue refining responsive layout on About page

--- a/about/index.html
+++ b/about/index.html
@@ -84,7 +84,7 @@
           </div>
 
           <div
-            class="relative w-2/3 flex justify-center items-center py-5 order-1"
+            class="relative w-2/3 ms-10 flex justify-center items-center py-5 order-1"
           >
             <div class="absolute -rotate-3 -left-5 top-2 md:-left-10 md:top-0">
               <img
@@ -677,14 +677,16 @@
           </div>
         </div>
         <div class="grid grid-cols-2 md:grid-cols-4 mt-10">
-          <h3 class="subtitle-600-24">2019-2024</h3>
+          <h3 class="subtitle-600-20 md:subtitle-600-24">2019-2024</h3>
           <div class="col-span-3">
-            <h3 class="subtitle-600-24">Bachelor of Science</h3>
+            <h3 class="subtitle-600-20 md:subtitle-600-24">
+              Bachelor of Science
+            </h3>
             <h4 class="subtitle-600-16">
-              Walisongo State Islamic Univesity -- Semarang, Indonesia.
+              Walisongo State Islamic Univesity — Semarang, Indonesia.
             </h4>
 
-            <p class="caption-500-14 mt-5">
+            <p class="caption-500-14 mt-5 text-text-blog">
               I hold a Bachelor’s degree in Physics from UIN Walisongo (2024),
               where I specialized in electronics and instrumentation. Throughout
               my studies, I worked with microcontrollers, sensors, and IoT
