--- a/index.html
+++ b/index.html
@@ -5,7 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bando Mega Kusuma</title>
 
+    <meta
+      name="title"
+      content="Bando Mega Kusuma | Software Engineer & Frontend Developer"
+    />
+    <meta
+      name="description"
+      content="I'm Bando Mega Kusuma, a Software Engineer, Frontend Developer, and IoT enthusiast. Explore my portfolio, projects, blog, and ways to connect with me."
+    />
+    <meta name="author" content="Bando Mega Kusuma" />
+
     <link rel="icon" href="/images/icons/icon.png" type="image/x-icon" />
+
     <link href="/src/output.css" rel="stylesheet" />
   </head>
   <body class="bg-bg-dark text-text">
