--- a/about/index.html
+++ b/about/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About | Bando Mega Kusuma</title>
-    <meta name="description" content="I am developer" />
+    <meta
+      name="title"
+      content="Bando Mega Kusuma | Software Engineer & Frontend Developer"
+    />
+    <meta
+      name="description"
+      content="I'm Bando Mega Kusuma, a Software Engineer, Frontend Developer, and IoT enthusiast. Explore my portfolio, projects, blog, and ways to connect with me."
+    />
+    <meta name="author" content="Bando Mega Kusuma" />
 
     <link rel="icon" href="/images/icons/icon.png" type="image/x-icon" />
     <link rel="stylesheet" href="/src/output.css" />
