fix(blog, home, wip): improve responsiveness on blog page; adjust profile image size on homepage

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           <img
             src="/images/profile.jpg"
             alt="bando-profile"
-            class="rounded-xl max-w-80 sm:w-full object-cover"
+            class="rounded-xl max-w-80 md:max-w-120 sm:w-full object-cover"
           />
         </div>
       </section>
