fix(seo, blog): add meta tags on homepage; update logo icon; improve blog page responsiveness

--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@
     />
     <meta name="author" content="Bando Mega Kusuma" />
 
-    <link rel="icon" href="/images/icons/icon.png" type="image/x-icon" />
+    <link rel="icon" href="/images/icons/logo.svg" type="image/x-icon" />
     <link rel="stylesheet" href="/src/output.css" />
   </head>
   <body class="bg-bg-dark text-text">
@@ -92,13 +92,13 @@
           </div>
 
           <div
-            class="relative w-2/3 ms-10 flex justify-center items-center py-5 order-1"
+            class="relative w-2/3 ms-10 md:ms-0 flex justify-center items-center py-5 order-1"
           >
             <div class="absolute -rotate-3 -left-5 top-2 md:-left-10 md:top-0">
               <img
                 src="/images/profile.jpg"
                 alt="Profile 1"
-                class="w-40 h-56 md:w-70 md:h-80 object-cover rounded-xl shadow-lg"
+                class="w-40 h-56 md:w-60 md:h-80 object-cover rounded-xl shadow-lg"
               />
             </div>
 
@@ -126,7 +126,7 @@
         </div>
 
         <div class="stack mt-10">
-          <div class="grid grid-cols-1 md:grid-cols-2 gap-4 md:gap-10">
+          <div class="grid grid-cols-1 md:grid-cols-2 gap-8 md:gap-10">
             <div class="left-side">
               <div>
                 <h3 class="subtitle-600-20">Frontend Development</h3>
@@ -188,7 +188,7 @@
                 </div>
               </div>
 
-              <div class="mt-8 blur-sm hover:blur-none">
+              <div class="mt-8 blur-sm hover:blur-none hidden md:block">
                 <h3 class="subtitle-600-20">Backend & API Development</h3>
                 <div class="grid grid-cols-2 md:grid-cols-4 gap-y-1 mt-3">
                   <div class="flex gap-1 items-center">
@@ -220,7 +220,7 @@
                 </div>
               </div>
 
-              <div class="mt-8 blur-sm hover:blur-none">
+              <div class="mt-8 blur-sm hover:blur-none hidden md:block">
                 <h3 class="subtitle-600-20">Fullstack Frameworks</h3>
                 <div class="grid grid-cols-2 md:grid-cols-4 gap-y-1 mt-3">
                   <div class="flex gap-1 items-center">
