--- a/index.html
+++ b/index.html
@@ -15,7 +15,38 @@
     />
     <meta name="author" content="Bando Mega Kusuma" />
 
-    <link rel="icon" href="/images/icons/icon.png" type="image/x-icon" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://bandomega.com/" />
+    <meta
+      property="og:title"
+      content="Bando Mega Kusuma | Software Engineer & Frontend Developer"
+    />
+    <meta
+      property="og:description"
+      content="Explore my projects, blog, and portfolio. Let's connect!"
+    />
+    <meta
+      property="og:image"
+      content="https://bandomega.com/images/icons/logo.svg"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://bandomega.com/" />
+    <meta
+      property="twitter:title"
+      content="Bando Mega Kusuma | Software Engineer & Frontend Developer"
+    />
+    <meta
+      property="twitter:description"
+      content="Explore my projects, blog, and portfolio. Let's connect!"
+    />
+    <meta
+      property="twitter:image"
+      content="https://bandomega.com/images/icons/logo.svg"
+    />
+
+    <link rel="icon" href="/images/icons/logo.svg" type="image/x-icon" />
 
     <link href="/src/output.css" rel="stylesheet" />
   </head>
