--- a/projects/index.html
+++ b/projects/index.html
@@ -15,7 +15,7 @@
     />
     <meta name="author" content="Bando Mega Kusuma" />
 
-    <link rel="icon" href="/images/icons/icon.png" type="image/x-icon" />
+    <link rel="icon" href="/images/icons/logo.svg" type="image/x-icon" />
   </head>
   <body class="bg-bg-dark text-text">
     <header class="fixed top-0 left-0 w-full z-10">
