fix(style): apply gradient color; improve responsiveness

--- a/contact/index.html
+++ b/contact/index.html
@@ -47,10 +47,14 @@
         </nav>
       </div>
     </header>
-    <main>
+    <main class="mt-25 md:mt-35">
       <section class="mt-20 mx-[6.25rem]">
         <div class="title text-center">
-          <h1 class="title-600-48 color-gradient-primary">Contact</h1>
+          <h1
+            class="title-600-48 bg-gradient-to-r from-primary from-30% to-accent text-transparent bg-clip-text inline-block"
+          >
+            Contact
+          </h1>
           <p class="body-large-400-18 text-text-muted">
             Let’s connect! Whether it’s about tech, collaboration, or just
             sharing ideas - here’s where you can reach me.
