--- a/projects/index.html
+++ b/projects/index.html
@@ -48,10 +48,14 @@
       </div>
     </header>
 
-    <main>
+    <main class="mt-25 md:mt-35">
       <section class="mt-20 mx-[6.25rem]">
         <div class="title text-center">
-          <h1 class="title-600-48 color-gradient-primary">Projects</h1>
+          <h1
+            class="title-600-48 bg-gradient-to-r from-primary from-30% to-accent text-transparent bg-clip-text inline-block"
+          >
+            Projects
+          </h1>
           <p class="body-large-400-18 text-text-muted">
             A collection of projects I’ve built to sharpen my skills and explore
             ideas.
