--- a/projects/project-details/index.html
+++ b/projects/project-details/index.html
@@ -48,7 +48,7 @@
       </div>
     </header>
 
-    <main>
+    <main class="mt-25 md:mt-35">
       <section class="mt-20 mx-[6.25rem]">
         <div class="mt-10">
           <h2 class="heading-600-32">Bandomega Personal Website</h2>
