--- a/about/index.html
+++ b/about/index.html
@@ -48,7 +48,7 @@
       </div>
     </header>
 
-    <main>
+    <main class="mt-25 md:mt-35">
       <section id="header" class="mt-25 md:mt-25 md:mx-25 mx-5">
         <div class="title">
           <h1 class="title-600-48 text-center">
