fix(contact): improve responsive layout on contact page

--- a/about/index.html
+++ b/about/index.html
@@ -51,7 +51,7 @@
     <main class="mt-25 md:mt-35">
       <section id="header" class="mt-25 md:mt-25 md:mx-25 mx-5">
         <div class="title">
-          <h1 class="title-600-48 text-center">
+          <h1 class="heading-600-32 md:title-600-48 text-center">
             About <span class="color-gradient-primary">Me</span>
           </h1>
           <p class="body-large-400-18 text-center text-text-muted">
