--- a/contact/index.html
+++ b/contact/index.html
@@ -48,10 +48,10 @@
       </div>
     </header>
     <main class="mt-25 md:mt-35">
-      <section class="mt-20 mx-[6.25rem]">
+      <section class="mt-20 md:mx-25 mx-5">
         <div class="title text-center">
           <h1
-            class="title-600-48 bg-gradient-to-r from-primary from-30% to-accent text-transparent bg-clip-text inline-block"
+            class="heading-600-32 md:title-600-48 bg-gradient-to-r from-primary from-30% to-accent text-transparent bg-clip-text inline-block"
           >
             Contact
           </h1>
@@ -61,9 +61,10 @@
           </p>
         </div>
       </section>
-      <section class="mt-20 mx-[6.25rem]">
+
+      <section class="mt-20 md:mx-25 mx-5">
         <form
-          class="bg-bg-light px-15 py-15 w-150 flex flex-col gap-5 mx-auto rounded-lg"
+          class="bg-bg-light px-5 py-5 md:px-15 md:py-15 w-full md:w-150 flex flex-col gap-10 mx-auto rounded-lg"
         >
           <div class="w-full">
             <label for="name"> Name </label>
@@ -71,7 +72,7 @@
               id="name"
               type="text"
               placeholder="John Doe"
-              class="bg-bg-dark py-2 px-3 mt-1 rounded-lg w-full"
+              class="bg-bg-dark py-2 px-3 mt-3 rounded-lg w-full"
             />
           </div>
 
@@ -81,7 +82,7 @@
               id="email"
               type="email"
               placeholder="example@email.com"
-              class="bg-bg-dark py-2 px-3 mt-1 rounded-lg w-full"
+              class="bg-bg-dark py-2 px-3 mt-3 rounded-lg w-full"
             />
           </div>
 
@@ -91,7 +92,7 @@
               id="subject"
               type="text"
               placeholder="Inquiry about collaboration"
-              class="bg-bg-dark py-2 px-3 mt-1 rounded-lg w-full"
+              class="bg-bg-dark py-2 px-3 mt-3 rounded-lg w-full"
             />
           </div>
 
@@ -100,7 +101,7 @@
             <textarea
               id="message"
               placeholder="Write your message here.."
-              class="bg-bg-dark py-2 px-3 mt-1 rounded-lg w-full h-25 resize-none"
+              class="bg-bg-dark py-2 px-3 mt-3 rounded-lg w-full h-25 resize-none"
             ></textarea>
           </div>
 
